# Custom-payments-calculation

./: pyproject.toml
cpc/: asgi.py  settings.py  urls.py  wsgi.py
cpc/templates/main/: index.html
nds/: apps.py  models.py  urls.py  views.py
nds/templates/nds/: index.html  result.html
tax_calculation/: apps.py  models.py  urls.py  views.py
tax_calculation/templates/: index.html  result.html
tax_calculation/templates/tax_calculation/: result.html
tnved/: admin.py  apps.py  models.py  urls.py  views.py
