[tool.poetry]
name = "custom-payments-calculation"
version = "0.1.0"
description = "Веб-платформа для рассчета таможенных платежей."
authors = ["Andrey Goryachev <raikslerx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
postgres = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
